
NEW FEATURES

  o added a function tidy.app() to replace tidy.gui() in previous versions:
  tidy.app() launches a Shiny app in the browser to reformat R code. The
  gWidgets interface (e.g. GTK+) is no longer supported. See
  https://yihui.shinyapps.io/formatR/ for a live demo.

BUG FIXES

  o the shebang #! is no longer treated as an R comment (thanks, Mirko
  Ebert, #36)

MINOR CHANGES

  o the usage() function returns the source code of the usage of a function
  now; in previous versions, it only returns NULL

  o added a new argument 'tidy' in usage() to make it possible not to
  reformat the usage code

  o tidy.source() may not work for R 3.0.0 or 3.0.1 if the code only
  contains comments due to a bug in base R, which has been fixed; if you use
  R 3.0, please upgrade to at least R 3.0.2 (R 2.15.x is not affected)

		   CHANGES IN formatR VERSION 0.10

MINOR CHANGES

  o the argument 'replace.assign' in tidy.source() will be treated as FALSE
  if there is no = in the code, because there is no need to replace = in
  such cases (this slighly improves the performance)

  o the PDF vignette was removed, and only the Markdown vignette was kept in
  this package, which uses the vignette engine knitr::docco_linear; see
  vignette('formatR', package = 'formatR')

		   CHANGES IN formatR VERSION 0.9

MAJOR CHANGES

  o tidy.source() uses utils::getParseData() to identify comments in R code
  under R 3.0.x, which is much more accurate than the regular expressions in
  previous versions; users are strongly recommended to try R 3.0.x (#25, #26)

  o changed the meaning of the argument 'width' in usage(); see documentation

		   CHANGES IN formatR VERSION 0.8

MAJOR CHANGES

  o tidy.source(text = character(0)) returns character(0) instead of ''

  o removed the (dark voodoo) functions parse.tidy() and deparse.tidy() as
  well as the operator "%InLiNe_IdEnTiFiEr%"; they were designed for the
  pgfSweave package, which has been archived on CRAN for a long time
