@@ -4,9 +4,9 @@ library(formatR)
 shinyServer(function(input, output, session) {
   observe({
     res = try(tidy.source(
-      text = input$src, output = FALSE, keep.comment = input$arg_comment,
-      keep.blank.line = input$arg_blank, replace.assign = input$arg_assign,
-      left.brace.newline = input$arg_brace, reindent.spaces = input$arg_indent,
+      text = input$src, output = FALSE, comment = input$arg_comment,
+      blank = input$arg_blank, arrow = input$arg_assign,
+      brace.newline = input$arg_brace, indent = input$arg_indent,
       width.cutoff = input$arg_width
     ))
     session$sendCustomMessage(
